Attendance Logic done!